--- a/app/assets/stylesheets/progressive.sass
+++ b/app/assets/stylesheets/progressive.sass
@@ -4,23 +4,25 @@
 
 // ujs helpers (sass placeholder declarations):
 %ujs_hidden
-  display: none
+  display: none !important
 %ujs_shown
-  display: inherit
+  display: inherit !important
 
 .no-js
   // - default shown:
   //   (nothing to do)
   // - hide if has js:
   html.has-js &
-    @extend %ujs_hidden
+    &, & *
+      @extend %ujs_hidden
 
 .js-only
-  // default hidden
-  @extend %ujs_hidden
-  // show if has js
-  html.has-js &
-    @extend %ujs_shown
+  &, & *
+    // default hidden
+    @extend %ujs_hidden
+    // show if has js
+    html.has-js &
+      @extend %ujs_shown
 
 
 // ujs fixes per element:
