ui/presenter: configure relations (flyout) usage
- new config params for presenter/polybox
  - remove 'interactive'
  - props.get.with_actions
  - props.withBox

- js: models: Collection, concern 'Favoritable'
- refactor thumb relations
    just the minimum needed to easily fix the bugs…
- fix: don't load unneded relations on dashboard (sidebar!)

--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -2,4 +2,4 @@
     icon: component('icon.media-entry'),
     text: t(:sitemap_collections))
 
-= react('Deco.MediaResourcesBox', get: @get, interactive: true, saveable: true)
+= react('Deco.MediaResourcesBox', get: @get, withBox: true, saveable: true)
