--- a/app/views/explore/index.html.haml
+++ b/app/views/explore/index.html.haml
@@ -3,7 +3,7 @@
       title: t(:sitemap_media_entries),
       link: { text: t(:resources_header_show_all),
               href: media_entries_path})
-  = react('Deco.MediaResourcesBox', get: @get.media_entries, interactive: false)
+  = react('Deco.MediaResourcesBox', get: @get.media_entries, withBox: false)
 
   %hr.separator.mini.mbl
 
@@ -11,7 +11,7 @@
       title: t(:sitemap_collections),
       link: { text: t(:resources_header_show_all),
               href: collections_path})
-  = react('Deco.MediaResourcesBox', get: @get.collections, interactive: false)
+  = react('Deco.MediaResourcesBox', get: @get.collections, withBox: false)
 
   -# %hr.separator.mini.mbl
   -#
@@ -19,4 +19,4 @@
   -#     title: t(:sitemap_filter_sets),
   -#     link: { text: t(:resources_header_show_all),
   -#             href: filter_sets_path})
-  -# = react('Deco.MediaResourcesBox', get: @get.filter_sets, interactive: false)
+  -# = react('Deco.MediaResourcesBox', get: @get.filter_sets, withBox: false)
