--- a/app/views/my/_section_media_resources.html.haml
+++ b/app/views/my/_section_media_resources.html.haml
@@ -1,6 +1,7 @@
 :ruby
   mods = []
-  interactive = (true if params[:action] != 'dashboard')
+  # HACK: toggle box via prop…
+  with_box = (true if params[:action] != 'dashboard')
   mods << ['rounded-right', { bordered: false }] if (params[:action] != 'dashboard')
   mods << 'unpaginated' if (local_assigns[:show_pagination_nav] == false)
   fallback = section[:is_empty?] ? true : false
@@ -8,6 +9,6 @@
 = react('Deco.MediaResourcesBox',
     get: @get.send(section[:id]),
     mods: mods,
-    interactive: interactive,
+    withBox: with_box,
     fallback: fallback,
     initial: { show_filter: false })
