feat: ui: Set show and edit metadata
Author:    phiku <philipp.kuederli@zhdk.ch>
Date:      Mon May 2 17:56:52 2016 +0200

squashed with

commit ef58c7939c7a7465796123b14efcce72998cafc1
Author: Max Albrecht <max.albrecht@zhdk.ch>
Date:   Sat May 7 12:29:31 2016 +0200

    fixup! feat: ui: Set show and edit metadata

--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -1,112 +1,3 @@
 :ruby
-  tag_mods = ['small','ellipsed']
-  collection_show = {}
 
-  favor_button = (@get.policy(current_user).disfavor? and @get.favored) ?
-    component('button',
-      link: disfavor_collection_path,
-      title: t(:resource_action_disfavor, raise: false),
-      method: :patch,
-      icon: :favorite)
-    : nil
-
-  disfavor_button = (@get.policy(current_user).favor? and !@get.favored) ?
-    component('button',
-      link: favor_collection_path,
-      title: t(:resource_action_favor, raise: false),
-      method: :patch,
-      icon: :nofavorite)
-    : nil
-
-  action_buttons = [favor_button, disfavor_button].compact
-
-  (@get.policy(current_user).edit_cover?) ?
-    action_buttons << component('button',
-      link: cover_edit_collection_path,
-      title: t(:resource_action_edit_cover, raise: false),
-      method: :get,
-      icon: :cover)
-    : nil
-
-  (@get.policy(current_user).ask_delete?) ?
-    action_buttons << component('button',
-      link: ask_delete_collection_path,
-      title: t(:resource_action_destroy, raise: false),
-      method: :get,
-      icon: :trash)
-    : nil
-
-  (@get.policy(current_user).add_remove_collection?) ?
-    action_buttons << component('button',
-      link: select_collection_collection_path,
-      title: t(:resource_action_select_collection, raise: false),
-      method: :get,
-      icon: :move)
-    : nil
-
-  (@get.policy(current_user).edit_highlights?) ?
-    action_buttons << component('button',
-      link: highlights_edit_collection_path,
-      title: t(:resource_action_edit_highlights, raise: false),
-      method: :get,
-      icon: :highlight)
-    : nil
-
-
-
-  collection_show[:header] = \
-    component('page-header',
-      icon: component('icon.set'),
-      text: @get.title,
-      actions: action_buttons
-    )
-
-  collection_show[:overview] = \
-    deco('resource_show_overview',
-      mods: 'ui-set-overview',
-      preview: \
-        component('thumbnail', mods: ['media-set'],
-          title: @get.title,
-          picture: @get.image_url),
-      content: \
-        combo('metadata-box',
-          mods: 'ui-summary-table.ui-set-summary.compact',
-          # TODO: build this list in a presenter?
-          # @get.metadata => [ [key, value], [key, value] ]
-          list: [[t(:resource_meta_data_title), @get.title, 'title-l'],
-                 [t(:resource_meta_data_description), @get.description],
-                 [t(:resource_meta_data_keywords), combo('tag-cloud.label', list: @get.keywords,
-                                                       mods: tag_mods)],
-                 [t(:resource_meta_data_responsible),
-                  deco('person-tag-list', person: @get.responsible,
-                                          mods: tag_mods)]
-                ])
-    )
-
-- collection_show[:more_info] = capture_haml do
-  - if @get.relations.any?
-    .ui-container.midtone.rounded-bottom.pal.well
-      %h3.title-l.separated.mbm
-        = t(:relations_title)
-
-      %h4.title-m.mbm= t(:relations_parents_title)
-      = react('Deco.MediaResourcesBox',
-          withBox: false,
-          get: @get.relations.parent_media_resources)
-
-      %h4.title-m.mbm= t(:relations_siblings_title)
-      = react('Deco.MediaResourcesBox',
-          withBox: false,
-          get: @get.relations.sibling_media_resources)
-
-
-    .ui-separator.mbl
-
-  -# TODO: t(:collection_media_resources_title)
-  = react('Deco.MediaResourcesBox',
-    get: @get.relations.child_media_resources,
-    withBox: true,
-    initial: { show_filter: false },
-    mods: [{bordered: false}, 'rounded-bottom'])
-
-= deco('resource_show', collection_show)
+= react('CollectionShow', { activeTab: 0, get: @get })
