--- a/app/ui_elements/decorators/thumbnails/media_entry_index.haml
+++ b/app/ui_elements/decorators/thumbnails/media_entry_index.haml
@@ -9,8 +9,7 @@
     href: get.url,
     # yes this is *inside* the thumb… workaround hacky CSS :/
     meta: {
-      title: get.title,
-      subtitle: 'TODO in media_entry_index.haml'
+      title: get.title
     },
     badge_top_left: deco('privacy-status-icon', get: get)
   }
