--- a/app/assets/stylesheets/_config.sass
+++ b/app/assets/stylesheets/_config.sass
@@ -1,14 +1,9 @@
 /* Colour Palette
  *-----------------------------------------
 
-@import "config/defaults/*"
-
-@import "config/local/*"
-
-
-// TMP: Workaround - config is broken so set it to what the styleguide expects
-$main-color: hsla(174, 59%, 39%, 1)
-+colour-palette
+// TMP: Workaround - config is broken so set it to what the users expect
+$main-color: #7a9d29 // le zhdk green
+// +colour-palette
 $main-color-dark    : darken($main-color, 10%)
 $main-color-light   : lighten($main-color, 10%)
 
