--- a/app/views/media_entries/_show/_unpublished_header.haml
+++ b/app/views/media_entries/_show/_unpublished_header.haml
@@ -3,16 +3,7 @@
 
 .ui-container.bright.bordered-bottom.mbm
 
-  .ui-container.pal
-    .title-l
-      = "TODO: Set Selection"
-
-    .separator.mvm
-
-    .title-l
-      = "TODO: Permissions Summary"
-
-    .separator.mvm
+  .ui-container.pam
 
     .ui-actions
       = component('button.tertiary',
