--- a/app/assets/stylesheets/progressive.sass
+++ b/app/assets/stylesheets/progressive.sass
@@ -13,11 +13,11 @@
   //   (nothing to do)
   // - hide if has js:
   html.has-js &
-    &, & *
+    &, & > *
       @extend %ujs_hidden
 
 .js-only
-  &, & *
+  &, & > *
     // default hidden
     @extend %ujs_hidden
     // show if has js
