fix: ui: dashboard layout selection
there are now more than the 2 actions, so we need to check the other way around

--- a/app/views/my/_section_media_resources.html.erb
+++ b/app/views/my/_section_media_resources.html.erb
@@ -1,7 +1,7 @@
 <%=
 
 mods = []
-is_main = (true if params[:action] == 'dashboard')
+is_main = (true if params[:action] != 'dashboard_section')
 # HACK: toggle box via prop…
 with_box = (true if !is_main)
 mods << ['rounded-right', { bordered: false }] if !is_main
