chore: ui: react: cleanup
see comments in `react/index.coffee`

$ tree app/assets/javascripts/react
app/assets/javascripts/react
├── decorators
│   ├── BatchResourceMetaDataForm.cjsx
│   ├── MediaEntryPreview.cjsx
│   ├── MediaResourcesBox.cjsx
│   ├── ResourceMetaDataForm.cjsx
│   ├── ResourcePermissions.cjsx
│   ├── ResourceThumbnail.cjsx
│   └── ResourcesBatchBox.cjsx
├── index.coffee
├── lib
│   ├── AsyncDashboardSection.cjsx
│   ├── autocomplete.cjsx
│   ├── decorate-resource-names.coffee
│   ├── file-dropbox.cjsx
│   ├── forms
│   │   ├── form-label.cjsx
│   │   ├── input-field-text.cjsx
│   │   ├── input-resources.cjsx
│   │   ├── input-text.cjsx
│   │   ├── inputs-by-type.cjsx
│   │   └── rails-form.cjsx
│   ├── input-meta-datum.cjsx
│   ├── madek-prop-types.coffee
│   ├── meta-datum-inline-edit-poc.cjsx
│   └── ui.coffee
├── ui-components
│   ├── ActionsBar.cjsx
│   ├── AskModal.cjsx
│   ├── Button.cjsx
│   ├── ButtonGroup.cjsx
│   ├── DropdownButton.cjsx
│   ├── DropdownMenu.cjsx
│   ├── FilterBar.cjsx
│   ├── Icon.cjsx
│   ├── Link.cjsx
│   ├── MediaPlayer.cjsx
│   ├── Modal.cjsx
│   ├── Picture.cjsx
│   ├── Preloader.cjsx
│   ├── SideFilter.cjsx
│   ├── Thumbnail.cjsx
│   ├── index.coffee
│   └── propTypes.coffee
└── views
    ├── Collection
    │   ├── AskDelete.cjsx
    │   ├── Detail.cjsx
    │   ├── Metadata.cjsx
    │   ├── Relations.cjsx
    │   ├── ResourceSelection.cjsx
    │   └── SelectCollection.cjsx
    ├── CollectionShow.cjsx
    ├── MediaEntry
    │   ├── Export.cjsx
    │   └── Uploader.cjsx
    └── My
        └── CreateCollection.cjsx

--- a/app/views/collections/ask_delete.html.haml
+++ b/app/views/collections/ask_delete.html.haml
@@ -1,5 +1,4 @@
-:ruby
-
-- content_for(:modal) { react('AskDeleteCollection', { get: @get }) }
+- content_for(:modal) do
+  = react('Views.Collection.AskDelete', { get: @get })
 
 = render template: 'collections/show'
