--- a/app/views/media_entries/batch_edit_meta_data.html.haml
+++ b/app/views/media_entries/batch_edit_meta_data.html.haml
@@ -5,7 +5,7 @@
       actions: nil)
 
 - content_for(:overview) do
-  = react('BatchResourcesBox', get: @get)
-  = react('BatchFormResourceMetaData', get: @get)
+  = react('Deco.ResourcesBatchBox', get: @get)
+  = react('Deco.BatchResourceMetaDataForm', get: @get)
 
 = render template: 'layouts/app_resource'
