--- a/app/views/media_entries/export.haml
+++ b/app/views/media_entries/export.haml
@@ -1,5 +1,3 @@
-:ruby
-
-- content_for(:modal) { react('MediaEntryExport', { get: @get }) }
+- content_for(:modal) { react('Views.MediaEntry.Export', { get: @get }) }
 
 = render template: 'media_entries/show'
