--- a/app/views/media_entries/permissions.html.haml
+++ b/app/views/media_entries/permissions.html.haml
@@ -1,5 +1,5 @@
 :ruby
   props = { get: @get.permissions }
-  content_for(:overview) { react('RightsManagement', props) }
+  content_for(:overview) { react('Deco.ResourcePermissions', props) }
 
 = render template: 'media_entries/_show/_base'
