--- a/app/views/my/new_collection.haml
+++ b/app/views/my/new_collection.haml
@@ -1,5 +1,3 @@
-:ruby
-
-- content_for(:modal) { react('CreateCollection', { get: @get }) }
+- content_for(:modal) { react('Views.My.CreateCollection', { get: @get }) }
 
 = render template: 'my/dashboard'
