--- a/app/views/media_entries/edit_meta_data.html.haml
+++ b/app/views/media_entries/edit_meta_data.html.haml
@@ -5,6 +5,6 @@
       actions: nil)
 
 - content_for(:overview) do
-  = react('FormResourceMetaData', get: @get)
+  = react('Deco.ResourceMetaDataForm', get: @get)
 
 = render template: 'layouts/app_resource'
