--- a/app/views/media_entries/select_collection.html.haml
+++ b/app/views/media_entries/select_collection.html.haml
@@ -1,5 +1,3 @@
-:ruby
-
-- content_for(:modal) { react('SelectCollection', { get: @get }) }
+- content_for(:modal) { react('Views.Collection.SelectCollection', { get: @get }) }
 
 = render template: 'media_entries/show'
