--- a/app/views/media_entries/_show/_resource_header.haml
+++ b/app/views/media_entries/_show/_resource_header.haml
@@ -1,55 +1,1 @@
-:ruby
-  action_buttons = [
-    !@get.policy(current_user).update? ? nil : component('button',
-      link: edit_context_meta_data_media_entry_path,
-      title: t(:resource_action_edit, raise: false),
-      icon: :pen),
-
-    !@get.policy(current_user).destroy? ? nil : component('button',
-      link: media_entry_path,
-      title: t(:resource_action_destroy, raise: false),
-      icon: :trash,
-      method: :delete,
-      data: { confirm: t(:btn_delete_confirm_msq) })
-  ]
-
-  favor_button = (@get.policy(current_user).disfavor? and @get.favored) ?
-    component('button',
-      link: disfavor_media_entry_path,
-      method: :patch,
-      icon: :favorite)
-    : nil
-
-  disfavor_button = (@get.policy(current_user).favor? and !@get.favored) ?
-    component('button',
-      link: favor_media_entry_path,
-      method: :patch,
-      icon: :nofavorite)
-    : nil
-
-  favor_button ? action_buttons << favor_button : nil
-  disfavor_button ? action_buttons << disfavor_button : nil
-
-  (@get.policy(current_user).add_remove_collection?) ?
-    action_buttons << component('button',
-      link: select_collection_media_entry_path,
-      title: t(:resource_action_select_collection, raise: false),
-      method: :get,
-      icon: :move)
-    : nil
-
-  (@get.policy(current_user).export?) ?
-    action_buttons << component('button',
-      link: export_media_entry_path,
-      title: t(:todo, raise: false),
-      method: :get,
-      icon: :dload)
-    : nil
-
-
-
-
-= component('page-header',
-    icon: component('icon.media-entry'),
-    text: @get.title,
-    actions: action_buttons)
+= react('Views.MediaEntryHeader', { get: @get, showModal: false, async: true, modalAction: 'select_collection' })
