--- a/app/views/my/_section_media_resources.html.erb
+++ b/app/views/my/_section_media_resources.html.erb
@@ -13,7 +13,7 @@ render_async = (is_main && section[:render_async?]) or false
 
 if !render_async
   react('Deco.MediaResourcesBox',
-      get: @get.send(section[:id]),
+      get: atget.send(section[:id]),
       mods: mods,
       withBox: with_box,
       fallback: fallback,
