--- a/app/views/my/dashboard.haml
+++ b/app/views/my/dashboard.haml
@@ -3,7 +3,7 @@
   = t(:dashboard_title_head)
 
 - content_for(:page_header) do
-  = react('Views.DashboardHeader', { get: lget })
+  = react('Views.DashboardHeader', { get: hashget, showModal: showModal })
 
 
 -# - content_for(:page_sidebar) do
@@ -19,7 +19,7 @@
                 link: { text: t(:resources_header_show_all),
                         href: my_dashboard_section_path(section[:id])})
       = render partial: "my/section_#{section[:partial]}",
-               locals: { lget: lget, section: section, show_pagination_nav: false }
+               locals: { atget: atget, lget: lget, section: section, show_pagination_nav: false }
 
   .ui-container.pal
     - if dashboard_content
