style: add background-colors where images are used
fixes "transparent" boxes when images haven't loaded yet,
particularly in the flyouts (since images are lazy-loaded *on hover*)

--- a/app/assets/stylesheets/components/_ui-containers.sass
+++ b/app/assets/stylesheets/components/_ui-containers.sass
@@ -64,9 +64,11 @@
 // Grey ui-containers
 
 .ui-container.midtone
+  background-color: #e8e8e8 // like 'container-midtone.png'
   background-image: image-url("backgrounds/container-midtone.png")
 
 .ui-container.midtone-darker
+  background-color: #c6c6c6 // like 'container-midtone-darker.png'
   background-image: image-url("backgrounds/container-midtone-darker.png")
 
 // Bordered ui-containers
@@ -164,9 +166,11 @@
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
   .ui-container.midtone
+    background-color: #e8e8e8 // like 'container-midtone.png'
     background-image: image-url("backgrounds/container-midtone.png")
     background-size: 29px 29px
   .ui-container.midtone-darker
+    background-color: #c6c6c6 // like 'container-midtone-darker.png'
     background-image: image-url("backgrounds/container-midtone-darker.png")
     background-size: 29px 29px
 
