--- a/app/assets/stylesheets/_colors.sass
+++ b/app/assets/stylesheets/_colors.sass
@@ -61,4 +61,4 @@ $opacity-weak       : 0.05 !default
 /* Body
  *-----------------------------------------
 
-$body-background: image-url("backgrounds/body-background.png") !default
+$body-background: #f1f1f1 image-url("backgrounds/body-background.png") !default
