--- a/app/assets/stylesheets/components/_ui-stepline.sass
+++ b/app/assets/stylesheets/components/_ui-stepline.sass
@@ -8,6 +8,7 @@
 .ui-stepline
   +border-top-radius($border-radius-m)
   +micro-clearfix
+  background-color: #e8e8e8 // like 'container-midtone.png'
   background-image: image-url("backgrounds/container-midtone.png")
   display: table
   width: 100%
@@ -50,5 +51,6 @@
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
   .ui-stepline
+    background-color: #e8e8e8 // like 'container-midtone.png'
     background-image: image-url("backgrounds/container-midtone.png")
     background-size: 29px 29px
