--- a/app/assets/stylesheets/components/_ui-thumb.sass
+++ b/app/assets/stylesheets/components/_ui-thumb.sass
@@ -85,6 +85,7 @@
   +micro-clearfix
   display: none
   border-style: solid
+  background-color: #c6c6c6 // like 'container-midtone-darker.png'
   background-image: image-url("backgrounds/container-midtone-darker.png")
   background-size: 29px 29px
   border-color: $darken
