--- a/app/assets/stylesheets/combos/_ui-resources-grid.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-grid.sass
@@ -22,6 +22,15 @@
     margin: 0
     padding: 15px
     position: relative
+
+  // NOTE: This was added for the ../explore view. You cannot change the one
+  // above, since that one is used also for the dashboard.
+  .ui-thumbnail.media-catalog
+    +dimension(300px, auto)
+    margin: 0
+    padding: 15px
+    position: relative
+
   .ui-thumbnail-privacy
     display: none
   .ui-thumbnail-meta
