--- a/app/assets/stylesheets/combos/_ui-home-claim.sass
+++ b/app/assets/stylesheets/combos/_ui-home-claim.sass
@@ -33,8 +33,8 @@
     +border-bottom-radius($border-radius-m)
     border: 1px solid $mono-light
     background: $white
-    min-height: 180px
-    padding: $space-s $space-m $space-m
+    min-height: 220px
+    padding: $space-s $space-m 0
 
   &.round
     +border-radius($border-radius-m)
